// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c4 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c4 {
  font-style: italic;
}

kbd.c4 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c4 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c4 {
  font-weight: bold;
}

sub.c4,
sup.c4 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c4,
u.c4 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c4,
cite.c4,
var.c4,
em.c4 {
  font-style: italic;
}

kbd.c4,
pre.c4,
samp.c4 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c4 .c5 {
  top: 0.15em;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #35709e;
  border-radius: 4px;
  position: relative;
}

.c3 {
  padding: 1rem;
}

<div
  class="c0 c1"
  role="alert"
  type="info"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <div
      class="c3 c1"
    >
      <span
        class="c4 c1"
      >
        Alert
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a close button is present 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c8[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c8 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8:hover {
  color: #000;
  fill: #000;
}

.c5 {
  font-weight: 700;
  line-height: 1.2;
}

.c5:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c5 + .sub-heading {
  margin-top: -1rem;
}

h1.c5 {
  font-size: 3rem;
}

h2.c5 {
  font-size: 2.5rem;
}

h3.c5 {
  font-size: 2rem;
}

h4.c5 {
  font-size: 1.5rem;
}

h5.c5 {
  font-size: 1.25rem;
}

h6.c5 {
  font-size: 1rem;
}

.c5 .c11 {
  top: 0.15em;
}

.c10 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

abbr.c6 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c6 {
  font-style: italic;
}

kbd.c6 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c6 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c6 {
  font-weight: bold;
}

sub.c6,
sup.c6 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c6,
u.c6 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c6,
cite.c6,
var.c6,
em.c6 {
  font-style: italic;
}

kbd.c6,
pre.c6,
samp.c6 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c6 .c11 {
  top: 0.15em;
}

.c4 {
  font-weight: 600;
}

.c4.c4 {
  margin-bottom: 0.5em;
}

.c7 {
  width: 24px;
  height: 24px;
  padding: 0;
  text-align: right;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c7:hover {
  background-color: #f2f2f2;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #35709e;
  border-radius: 4px;
  position: relative;
}

.c3 {
  padding: 1rem;
}

<div
  class="c0 c1"
  role="alert"
  type="info"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <div
      class="c3 c1"
    >
      <h6
        class="c4 heading c5 c1"
      >
        Title
      </h6>
      <span
        class="c6 c1"
      >
        Alert
      </span>
    </div>
    <button
      class="c7 c8 c9"
      kind="link"
      type="button"
    >
      <div
        class="c10 c1"
      >
        Close
      </div>
      <svg
        aria-hidden="true"
        class="c11 c12 c1"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 352 512"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`renders correctly when a title prop is set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  font-weight: 700;
  line-height: 1.2;
}

.c5:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c5 + .sub-heading {
  margin-top: -1rem;
}

h1.c5 {
  font-size: 3rem;
}

h2.c5 {
  font-size: 2.5rem;
}

h3.c5 {
  font-size: 2rem;
}

h4.c5 {
  font-size: 1.5rem;
}

h5.c5 {
  font-size: 1.25rem;
}

h6.c5 {
  font-size: 1rem;
}

.c5 .c7 {
  top: 0.15em;
}

abbr.c6 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c6 {
  font-style: italic;
}

kbd.c6 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c6 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c6 {
  font-weight: bold;
}

sub.c6,
sup.c6 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c6,
u.c6 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c6,
cite.c6,
var.c6,
em.c6 {
  font-style: italic;
}

kbd.c6,
pre.c6,
samp.c6 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c6 .c7 {
  top: 0.15em;
}

.c4 {
  font-weight: 600;
}

.c4.c4 {
  margin-bottom: 0.5em;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #35709e;
  border-radius: 4px;
  position: relative;
}

.c3 {
  padding: 1rem;
}

<div
  class="c0 c1"
  role="alert"
  type="info"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <div
      class="c3 c1"
    >
      <h6
        class="c4 heading c5 c1"
      >
        Title
      </h6>
      <span
        class="c6 c1"
      >
        Alert
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a type prop is set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c4 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c4 {
  font-style: italic;
}

kbd.c4 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c4 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c4 {
  font-weight: bold;
}

sub.c4,
sup.c4 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c4,
u.c4 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c4,
cite.c4,
var.c4,
em.c4 {
  font-style: italic;
}

kbd.c4,
pre.c4,
samp.c4 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c4 .c5 {
  top: 0.15em;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #c9444d;
  border-radius: 4px;
  position: relative;
}

.c3 {
  padding: 1rem;
}

<div
  class="c0 c1"
  role="alert"
  type="danger"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <div
      class="c3 c1"
    >
      <span
        class="c4 c1"
      >
        Alert
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly when hasIcon prop is true 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #c9444d !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  fill: #c9444d;
  position: relative;
  font-size: 1.5em;
  height: 1em;
  width: 1em;
}

.c9 {
  font-weight: 700;
  line-height: 1.2;
}

.c9:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c9 + .sub-heading {
  margin-top: -1rem;
}

h1.c9 {
  font-size: 3rem;
}

h2.c9 {
  font-size: 2.5rem;
}

h3.c9 {
  font-size: 2rem;
}

h4.c9 {
  font-size: 1.5rem;
}

h5.c9 {
  font-size: 1.25rem;
}

h6.c9 {
  font-size: 1rem;
}

.c9 .c4 {
  top: 0.15em;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c4 {
  top: 0.15em;
}

.c8 {
  font-weight: 600;
}

.c8.c8 {
  margin-bottom: 0.5em;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #c9444d;
  border-radius: 4px;
  position: relative;
}

.c7 {
  padding: 1rem;
  padding-left: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem;
}

<div
  class="c0 c1"
  role="alert"
  type="danger"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <div
      class="c3 c1"
    >
      <svg
        class="c4 c5 c6"
        color="danger"
        role="img"
        size="1.5"
        style="size: 1.5px;"
        viewBox="0 0 512 512"
      >
        <title>
          danger
        </title>
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c7 c1"
    >
      <h6
        class="c8 heading c9 c1"
      >
        Title
      </h6>
      <span
        class="c10 c1"
      >
        Alert
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly when hasIcon prop is true for only a title 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #c9444d !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  fill: #c9444d;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c9 {
  font-weight: 700;
  line-height: 1.2;
}

.c9:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c9 + .sub-heading {
  margin-top: -1rem;
}

h1.c9 {
  font-size: 3rem;
}

h2.c9 {
  font-size: 2.5rem;
}

h3.c9 {
  font-size: 2rem;
}

h4.c9 {
  font-size: 1.5rem;
}

h5.c9 {
  font-size: 1.25rem;
}

h6.c9 {
  font-size: 1rem;
}

.c9 .c4 {
  top: 0.15em;
}

.c10 .c4 {
  top: 0.15em;
}

.c8 {
  font-weight: 600;
}

.c8.c8 {
  margin-bottom: 0.5em;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #c9444d;
  border-radius: 4px;
  position: relative;
}

.c7 {
  padding: 1rem;
  padding-left: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem;
}

<div
  class="c0 c1"
  role="alert"
  type="danger"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <div
      class="c3 c1"
    >
      <svg
        class="c4 c5 c6"
        color="danger"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <title>
          danger
        </title>
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c7 c1"
    >
      <h6
        class="c8 heading c9 c1"
      >
        Title
      </h6>
    </div>
  </div>
</div>
`;

exports[`renders correctly with a custom element 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #35709e;
  border-radius: 4px;
  position: relative;
}

.c3 {
  padding: 1rem;
}

<div
  class="c0 c1"
  role="alert"
  type="info"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <div
      class="c3 c1"
    >
      <label>
        Alert
      </label>
    </div>
  </div>
</div>
`;
